syntax = "proto3";
package DomainServices.DocumentArchiveService;
option csharp_namespace = "DomainServices.DocumentArchiveService.Contracts";

import "google/protobuf/empty.proto";

service MaintananceService{
	rpc DeleteDocumentDataFromArchiveQueue (DeleteDataFromArchiveQueueRequest) returns (google.protobuf.Empty);
}

message DeleteDataFromArchiveQueueRequest{}