syntax = "proto3";
package DomainServices.DocumentService;
option csharp_namespace = "DomainServices.DocumentService.Contracts";

import "Types.proto";
import "Identity.proto";

message GetDocumentRequest {
   string DocumentId = 1;
   cis.types.Identity Mandant = 2;
}

message GetDocumentResponse {
   string DocumentId = 1;
   bytes DocumentData = 2;
   //DocumentOrigin DocumentOrigin = 3;
   string MimeType = 4;
   string Filename = 5;
}